{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "4a698689-b3d1-a972-adcc-32f1dd96d983",
  "resources": [
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05db1f1d096a5d5ee",
            "owner_id": "593198633279",
            "tags": {
              "Name": "VPC internet gateway"
            },
            "vpc_id": "vpc-0ae12690b3c4be873"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0032003add9c1b258",
            "owner_id": "593198633279",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05db1f1d096a5d5ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0ae12690b3c4be873"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.main",
            "module.infrastructure.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c66716fd73b95712",
            "route_table_id": "rtb-0032003add9c1b258",
            "subnet_id": "subnet-0b3e5e6284a547cd0"
          },
          "dependencies": [
            "module.infrastructure.module.subnets.aws_subnet.main",
            "module.infrastructure.module.vpc.aws_internet_gateway.main",
            "module.infrastructure.module.vpc.aws_route_table.main",
            "module.infrastructure.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.SecurityGroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:security-group/sg-04658df70192681fb",
            "description": "allow ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04658df70192681fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wsg",
            "name_prefix": null,
            "owner_id": "593198633279",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ae12690b3c4be873"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:subnet/subnet-0b3e5e6284a547cd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b3e5e6284a547cd0",
            "map_public_ip_on_launch": false,
            "owner_id": "593198633279",
            "vpc_id": "vpc-0ae12690b3c4be873"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:593198633279:vpc/vpc-0ae12690b3c4be873",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7a9b64c146031ca",
            "default_route_table_id": "rtb-0b5a5215d4981cc22",
            "default_security_group_id": "sg-0fc3cc805df3ea9f0",
            "dhcp_options_id": "dopt-3e217656",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae12690b3c4be873",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5a5215d4981cc22",
            "owner_id": "593198633279"
          }
        }
      ]
    }
  ]
}